--- a/.github/workflows/buildmain.yml
+++ b/.github/workflows/buildmain.yml
@@ -42,11 +42,13 @@ jobs:
           # Get the latest publisher - don't run the batch script but run the line directly
           args: curl -L https://github.com/HL7/fhir-ig-publisher/releases/latest/download/publisher.jar -o ./input-cache/publisher.jar --create-dirs
 
+      - run: pwd && ls
+      
       - name: Run the IG publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
           # Run the publisher - don't run the batch script but run the line directly
-          args: pwd && ls && java -jar ./input-cache/publisher.jar publisher -ig .
+          args: java -jar ./input-cache/publisher.jar publisher -ig .
           
       
       - name: Upload a Build Artifact
